API Interna no funciona a governdigital.fundaciobit.org #334
